  command-line program
- Fix bug: possible crash in "loop foreach" if an invalid variable
  name is given
- Fix bug: "display data" broken in gui program for long datasets
  ("press a key to continue" mechanism was invoked erroneously)
- Fix bug: wrong variable shown when you select "Display actual,
  fitted, residual" for a GARCH model
- Fixes for appending data (make more flexible: allow appending of
  observations and/or variables)
- Fixes for cointegration tests: improve dialogs and prevent crash
  on selection of just one variable plus the constant
- Graph control dialog: add one-click option to force use of a
  single y axis
- New: in case of AR(1) estimation (Cochrane-Orcutt and similar), if
  a lagged dependent variable is included then we automatically
  use the procedure set out in Ramanathan, 5e, p. 450, to generate
  consistent estimates of the standard errors
- Fix: gui menu items for test of equality of means, with equal
  or unequal variances: these were hooked up in reverse
- corc, hilu and pwe AR(1) commands: make these available in
  loop mode
- add "quiet" option for the commands adf, kpss and wls
- add "simple-print" option for ols command (just print the
  coefficient table, with no auxiliary statistics)
- add "mahal" command: calculate Mahalanobis distances given
  a set of variables

01/28/2005 version 1.3.2
- Fix bug in auto-determination of lag in ADF test: was looking
  at the wrong coefficient in some cases
- Fix bug in VAR impulse responses: could get messed up by
  missing values that differ across series
- Fix bug: crash on generating LaTeX tabular output for a model
  estimated using robust standard errors (format string issue)
- Fix bug: the session "graph page" was not appearing even when
  a valid latex executable was available
- Fix bug: gretl console would not respond in case of an error when
  executing a command loop
- Fix bug: the "restrict" command failed in the GUI program when
  not applied to a named equation system